third_party/move/move-prover/tests/sources/functional/data_invariant_in_map.exp
Move prover returns: exiting with verification errors
error: data invariant does not hold
  ┌─ tests/sources/functional/data_invariant_in_map.move:8:9
  │
8 │         invariant value != 0;
  │         ^^^^^^^^^^^^^^^^^^^^^
  │
  =     at tests/sources/functional/data_invariant_in_map.move:20: violation_1
  =     at tests/sources/functional/data_invariant_in_map.move:21: violation_1
  =     at tests/sources/functional/data_invariant_in_map.move:22: violation_1
  =         s = <redacted>
  =     at tests/sources/functional/data_invariant_in_map.move:23: violation_1
  =     at tests/sources/functional/data_invariant_in_map.move:8
